Rename some options, increase the number of flowers in the Paradise theme, and make minor changes and fixes